# CSE461-HW1

./: .clang-tidy  Assignment.md  CMakeLists.txt  README.md  compile_commands.json  reload.py
assets/: scene copy.xml  scene.xml  scene_cat.xml  scene_chest.xml  scene_cube.xml  scene_orig.xml
inc/: AmbientLight.hpp  Camera.hpp  Cube.hpp  DirectionalLight.hpp  Light.hpp  Material.hpp  Mesh.hpp  PPMImage.hpp  Pixel.hpp  PointLight.hpp  Ray.hpp  Rectangle.hpp  Scene.hpp  SceneObject.hpp  Sphere.hpp  Surface.hpp  Triangle.hpp  Vector.hpp  math.hpp  scene.hpp  stb_image.h  stb_image_write.h  types.hpp
src/: Cube.cpp  PPMImage.cpp  Pixel.cpp  Rectangle.cpp  Scene.cpp  Sphere.cpp  Surface.cpp  Triangle.cpp  Vector.cpp  main.cpp  math.cpp  scene.cpp
